Added bold and underline tags

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
  <body>
-	<h1>This is a website.</h1>
-   	<p>Hi my name is prosper!</p>
+	<h1>This is a <b> website.</b> </h1>
+   	<p>Hi my name is <u> prosper! </u> </p>
  </body>
 </html>
 
