Fixed the bold and underline

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
  <body>
-	<h1>This is a <b> website.</b> </h1>
-   	<p>Hi my name is <u> prosper! </u> </p>
+	<h1>This is a <u> website. </u> </h1>
+   	<p>Hi my name is  <b> prosper! </b>  </p>
  </body>
 </html>
 
