Added a photo of a chicken

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<h1>This is a <u> website. </u> </h1>
    	<p>Hi my name is  <b> prosper! </b>  </p>
 	 <p><a href="https://www.trevor.org/">Trevor's Website </a></p>
+	 <p><img src="https://cdn.britannica.com/07/183407-050-C35648B5/Chicken.jpg" alt="picture of chicken" style="width:1600px;height:1127px;"></p>
+
  </body>
 </html>
 
