Added a color background

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
- <body>
+ <body bgcolor="fc03f0"> 
 	<h1>This is a <u> website. </u> </h1>
    	<p>Hi my name is  <b> prosper! <font color="red">This is in Red ! </font> </b>  </p>
 	 <p><a href="https://www.trevor.org/">Trevor's Website </a></p>
