--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 	 <p><img src="https://cdn.britannica.com/07/183407-050-C35648B5/Chicken.jpg" alt="picture of chicken" style="width:1600px;height:1127px;"></p>
 	<p><iframe width="560" height="315" src="https://www.youtube.com/embed/70IqKloH-mw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
 	<p><button>Prosper</button></p>
+	 <h2> Types of Chickens </h2> 
+	 <ul>
+  <li>Silkie</li>
+  <li>Plymouth Rock chicken</li>
+  <li>Brahma chicken</li>
+	 <li>Ayam Cemani </li>
+</ul>
 
  </body>
 </html>
