Added one more type of chicken to the list

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <li>Silkie</li>
   <li>Plymouth Rock chicken</li>
   <li>Brahma chicken</li>
-	 <li>Ayam Cemani </li>
+  <li>Ayam Cemani </li>
+  <li>Rhode Island Red</li>
 </ul>
 
  </body>
